jobs/job_60783810/uncert/errors/benchmark_603/solver_2.txt
INFO: Pointer analysis took 0 sec 195 ms
input.cc:500:34: error: use of undeclared identifier 'node1_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                 ^
input.cc:500:52: error: use of undeclared identifier 'node2_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                   ^
input.cc:500:70: error: use of undeclared identifier 'node3_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                     ^
input.cc:500:88: error: use of undeclared identifier 'node4_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                                       ^
input.cc:501:9: error: use of undeclared identifier 'node5_index'
        node5_index};
        ^
5 errors generated.
u8kI3_Ptr2Arr.c:500:34: error: use of undeclared identifier 'node1_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                 ^
u8kI3_Ptr2Arr.c:500:52: error: use of undeclared identifier 'node2_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                   ^
u8kI3_Ptr2Arr.c:500:70: error: use of undeclared identifier 'node3_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                     ^
u8kI3_Ptr2Arr.c:500:88: error: use of undeclared identifier 'node4_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                                       ^
u8kI3_Ptr2Arr.c:501:9: error: use of undeclared identifier 'node5_index'
        node5_index};
        ^
u8kI3_Ptr2Arr.c:2813:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 5 errors generated.
